--- a/LabManager-Client/nbproject/project.properties
+++ b/LabManager-Client/nbproject/project.properties
@@ -66,6 +66,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -74,11 +75,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=LabManager-Client
 main.class=br.erickweil.labmanager.client.TestSlave
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 project.LabManager=../LabManager
 project.LabStream=../LabStream
 project.license=gpl30
