--- a/LabManager-Install/nbproject/project.properties
+++ b/LabManager-Install/nbproject/project.properties
@@ -77,7 +77,7 @@ main.class=br.erickweil.labmanager.install.AutoUpdater
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 project.LabManager=../LabManager
 project.license=gpl30
 project.WebServer=../WebServer
