--- a/LabProxy/nbproject/project.properties
+++ b/LabProxy/nbproject/project.properties
@@ -63,6 +63,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -71,11 +72,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=LabProxy
 main.class=br.erickweil.labproxy.dns.jnamed
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 project.WebServer=../WebServer
 reference.WebServer.jar=${project.WebServer}/dist/WebServer.jar
 run.classpath=\
