--- a/LabStream/nbproject/project.properties
+++ b/LabStream/nbproject/project.properties
@@ -85,7 +85,7 @@ main.class=br.erickweil.streaming.TestWatcher
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 project.LabManager=../LabManager
 project.WebServer=../WebServer
 reference.LabManager.jar=${project.LabManager}/dist/LabManager.jar
