removido mais arquivos desnecessários

--- a/.gitignore
+++ b/.gitignore
@@ -39,10 +39,6 @@ Thumbs.db
 nbproject/
 build/
 .gradle/
-/LabManager-Client/dist/
-/LabManager-Install/dist/
-/LabManager-Server/dist/
-/LabManager-Client/store/
-/LabManager-Install/store/
-/LabManager-Server/store/
+dist/
+store/
 
