--- a/WebServer/nbproject/project.properties
+++ b/WebServer/nbproject/project.properties
@@ -51,10 +51,14 @@ dist.jar=${dist.dir}/WebServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.json-simple-1.1.1.jar=C:\\Users\\Usuario\\Documents\\NetBeansProjects\\WebServer\\lib\\json-simple-1.1.1.jar
+file.reference.jsoup-1.11.3.jar=C:\\Users\\Usuario\\Documents\\NetBeansProjects\\WebServer\\lib\\jsoup-1.11.3.jar
 file.reference.WebServer-src=src
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.jsoup-1.11.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
